Series pagination alignment bug.

--- a/src/styles/posts/post.less
+++ b/src/styles/posts/post.less
@@ -378,6 +378,12 @@
           line-height: 1;
         }
       }
+
+      .series-next-prev-placeholder {
+        min-width: 43%;
+        max-width: 43%;
+        opacity: 0;
+      }
     }
 
     .post-tags {
